syntax = "proto3";

package menu_service;
option go_package = "gitlab.com/media_park/bnpl-mono-repo/generated/menu_service";

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "menu_service/menu_types.proto";
import "google/protobuf/empty.proto";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
    info: { title: "API" version: "1.0.0" }
    security_definitions: {
        security: {
            key: "bearer"
            value: { type: TYPE_API_KEY in: IN_HEADER name: "Authorization" description: "Authentication token, prefixed by Bearer: Bearer <token>" }
        }
    }
    security: { security_requirement: { key: "bearer" } }
};

service MenuService {
    rpc CreateMenuItem(CreateMenuItemRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/v1/menu-items"
            body: "*"
        };
    }
    rpc GetMenuItem(GetMenuItemRequest) returns (GetMenuItemResponse) {
        option (google.api.http) = {
            get: "/v1/menu-items/{id}"
        };
    }
    rpc ListMenuItems(ListMenuItemsRequest) returns (ListMenuItemsResponse) {
        option (google.api.http) = {
            get: "/v1/menu-items"
        };
    }
    rpc UpdateMenuItem(UpdateMenuItemRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            put: "/v1/menu-items/{id}"
            body: "*"
        };
    }
    rpc DeleteMenuItem(DeleteMenuItemRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/v1/menu-items/{id}"
        };
    }
    rpc AccessMenu(google.protobuf.Empty) returns (AccessMenuResponse) {
        option (google.api.http) = {
            post: "/v1/access-menu"
            body: "*"
        };
    }
}