syntax = "proto3";

package menu_service;
option go_package = "gitlab.com/media_park/bnpl-mono-repo/generated/menu_service";

message CreateMenuItemRequest {
    string title       = 1;
    string category_id = 2;
    string venue_id    = 3;
    double price       = 4;
    string image_url   = 5;
    bool is_available  = 6;
    string description = 7;
}

message GetMenuItemRequest {
    string id = 1;
}

message GetMenuItemResponse {
    string id          = 1;
    string title       = 2;
    string category_id = 3;
    string venue_id    = 4;
    double price       = 5;
    string image_url   = 6;
    bool is_available  = 7;
    string description = 8;
}

message ListMenuItemsRequest {
    string venue_id    = 1;
    int32 limit        = 2;
    int32 page         = 3;
    string category_id = 4;
}

message ListMenuItemsResponse {
    repeated GetMenuItemResponse menu_items = 1;
    int32 total                             = 2;
}

message UpdateMenuItemRequest {
    string id          = 1;
    string title       = 2;
    string category_id = 3;
    string venue_id    = 4;
    double price       = 5;
    string image_url   = 6;
    bool is_available  = 7;
    string description = 8;
}

message DeleteMenuItemRequest {
    string id = 1;
}

message AccessMenuResponse {
    string link = 1;
}